@@ -207,6 +207,40 @@ py_gc_sound_play_ogg_cb(PyObject* self, PyObject* args)
 
 }
 
+/* void gc_sound_policy_set(guint); */
+static PyObject*
+py_gc_sound_policy_set(PyObject* self, PyObject* args)
+{
+  guint policy;
+  /* Parse arguments */
+  if(!PyArg_ParseTuple(args, "i:gc_sound_policy_set",&policy))
+    return NULL;
+
+  /* Call the corresponding C function */
+  gc_sound_policy_set(policy);
+
+  /* Create and return the result */
+  Py_INCREF(Py_None);
+  return Py_None;
+}
+
+/* int	 gc_sound_policy_get(void); */
+static PyObject*
+py_gc_sound_policy_get(PyObject* self, PyObject* args)
+{
+  guint policy;
+  /* Parse arguments */
+  if(!PyArg_ParseTuple(args, ":gc_sound_policy_set"))
+    return NULL;
+
+  /* Call the corresponding C function */
+  policy = gc_sound_policy_get();
+
+  /* Create and return the result */
+  return Py_BuildValue("i", policy);
+}
+
+
 static PyMethodDef PythonGcomprisSoundModule[] = {
   { "play_ogg_list",  py_gc_sound_play_ogg_list, METH_VARARGS, "gc_sound_play_ogg_list" },
   { "play_ogg",  py_gc_sound_play_ogg, METH_VARARGS, "gc_sound_play_ogg" },
@@ -215,6 +249,8 @@ static PyMethodDef PythonGcomprisSoundModule[] = {
   { "pause",  py_gc_sound_pause, METH_VARARGS, "gc_sound_pause" },
   { "resume",  py_gc_sound_resume, METH_VARARGS, "gc_sound_resume" },
   { "play_ogg_cb",  py_gc_sound_play_ogg_cb, METH_VARARGS, "gc_sound_play_ogg_cb" },
+  { "policy_get",  py_gc_sound_policy_get, METH_VARARGS, "gc_sound_policy_get" },
+  { "policy_set",  py_gc_sound_policy_set, METH_VARARGS, "gc_sound_policy_set" },
   { NULL, NULL, 0, NULL}
 };
 
@@ -222,6 +258,10 @@ void python_gcompris_sound_module_init(void)
 {
   PyObject* module;
   module = Py_InitModule("_gcompris_sound", PythonGcomprisSoundModule);
+
+  PyModule_AddIntConstant(module, "PLAY_ONLY_IF_IDLE", PLAY_ONLY_IF_IDLE );
+  PyModule_AddIntConstant(module, "PLAY_AFTER_CURRENT", PLAY_AFTER_CURRENT );
+  PyModule_AddIntConstant(module, "PLAY_AND_INTERRUPT", PLAY_AND_INTERRUPT );
 }
 
 /* Some usefull code parts ... */
